<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".StudentActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainStudentHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/student_header"
            android:textColor="@color/design_default_color_primary"
            android:textSize="35sp"
            android:fontFamily="@font/bariol_bold"/>

        <EditText
            android:id="@+id/mainName"
            android:layout_below="@+id/mainStudentHead"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="40dp"
            android:hint="@string/enter_name"/>

        <EditText
            android:id="@+id/mainRollNo"
            android:layout_below="@+id/mainName"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="40dp"
            android:hint="@string/enter_roll_no"/>

        <EditText
            android:id="@+id/mainDept"
            android:layout_below="@+id/mainRollNo"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="40dp"
            android:hint="@string/enter_dept"/>

        <EditText
            android:id="@+id/mainYear"
            android:layout_below="@+id/mainDept"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="40dp"
            android:hint="@string/enter_year"/>

        <TextView
            android:id="@+id/InHead"
            android:layout_below="@+id/mainYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/in_time"
            android:textColor="@color/design_default_color_primary"
            android:textSize="35sp"
            android:fontFamily="@font/bariol_bold"/>

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:background="@color/purple_200"
            android:headerBackground="@color/purple_500"
            android:layout_height="wrap_content"
            android:layout_below="@id/InHead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/OutHead"
            android:layout_below="@+id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="35sp"
            android:fontFamily="@font/bariol_bold"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_below="@+id/OutHead"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/mainSubmit"
            android:onClick="onSubmit"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>
</ScrollView>