<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/mainLoginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/mainLoginHeader"
        android:textColor="@color/design_default_color_primary"
        android:textSize="45sp"
        android:fontFamily="@font/bariol_bold"/>

    <ImageView
        android:id="@+id/mainBannerImage"
        android:layout_below="@id/mainLoginHeader"
        android:layout_marginTop="20dp"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:padding="2dp"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/mainEmail"
        android:layout_below="@+id/mainBannerImage"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="40dp"
        android:maxLines="1"
        android:hint="@string/mainEmailHint"/>

    <EditText
        android:id="@+id/mainPassword"
        android:layout_below="@+id/mainEmail"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="40dp"
        android:maxLines="1"
        android:hint="@string/mainPasswordHint"/>

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="wrap_content"
        android:layout_below="@+id/mainPassword"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/mainLoginButtonText"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:onClick="onClickLogin"
        android:background="@drawable/custom_button"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>