<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/mainAppHeader"
        android:textColor="@color/design_default_color_primary"
        android:textSize="55sp"
        android:fontFamily="@font/bariol_bold"/>


    <TextView
        android:id="@+id/mainSubHeader"
        android:layout_below="@id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:text="@string/mainSubHeader"
        android:textColor="@color/design_default_color_primary"
        android:textSize="45sp"
        android:fontFamily="@font/bariol_bold"/>

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="wrap_content"
        android:layout_below="@+id/mainSubHeader"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/mainLoginButtonText"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/design_default_color_primary"
        android:layout_marginTop="40dp"
        />

</RelativeLayout>